--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "express": "^4.18.1",
     "mongodb": "^4.9.1",
+    "morgan": "^1.10.0",
     "typescript": "^4.8.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^18.7.18",
     "dotenv": "^16.0.2",
     "prettier": "^2.7.1",
